syntax = "proto3";

package employment_order;

option go_package = "github.com/example/micro/proto/gen/go/employment_order;employmentorderpb";

message EmploymentOrderHeader {
  int64 id = 1;
  string number = 2;
  string preparation_date = 3; // date
  int64 organization_id = 4;
}

message EmploymentOrderBody {
  int64 id = 1;
  int64 employment_order_header_id = 2;
  int64 employment_contract_id = 3;
  int64 department_id = 4;
  int64 position_id = 5;
  double salary = 6; // numeric(12,2)
  string work_date_from = 7; // date
  string work_date_to = 8; // date
  int32 probation_months = 9;
}

// Header CRUD
message CreateEmploymentOrderHeaderRequest {
  string number = 1;
  string preparation_date = 2;
  int64 organization_id = 3;
}
message CreateEmploymentOrderHeaderResponse { EmploymentOrderHeader header = 1; }

message GetEmploymentOrderHeaderRequest { int64 id = 1; }
message GetEmploymentOrderHeaderResponse { EmploymentOrderHeader header = 1; }

message ListEmploymentOrderHeadersRequest { int32 limit = 1; int32 offset = 2; }
message ListEmploymentOrderHeadersResponse { repeated EmploymentOrderHeader headers = 1; }

message UpdateEmploymentOrderHeaderRequest {
  int64 id = 1;
  string number = 2;
  string preparation_date = 3;
  int64 organization_id = 4;
}
message UpdateEmploymentOrderHeaderResponse { EmploymentOrderHeader header = 1; }

message DeleteEmploymentOrderHeaderRequest { int64 id = 1; }
message DeleteEmploymentOrderHeaderResponse {}

// Body CRUD
message CreateEmploymentOrderBodyRequest {
  int64 employment_order_header_id = 1;
  int64 employment_contract_id = 2;
  int64 department_id = 3;
  int64 position_id = 4;
  double salary = 5;
  string work_date_from = 6;
  string work_date_to = 7;
  int32 probation_months = 8;
}
message CreateEmploymentOrderBodyResponse { EmploymentOrderBody body = 1; }

message GetEmploymentOrderBodyRequest { int64 id = 1; }
message GetEmploymentOrderBodyResponse { EmploymentOrderBody body = 1; }

message ListEmploymentOrderBodiesRequest { int64 header_id = 1; int32 limit = 2; int32 offset = 3; }
message ListEmploymentOrderBodiesResponse { repeated EmploymentOrderBody bodies = 1; }

message UpdateEmploymentOrderBodyRequest {
  int64 id = 1;
  int64 employment_order_header_id = 2;
  int64 employment_contract_id = 3;
  int64 department_id = 4;
  int64 position_id = 5;
  double salary = 6;
  string work_date_from = 7;
  string work_date_to = 8;
  int32 probation_months = 9;
}
message UpdateEmploymentOrderBodyResponse { EmploymentOrderBody body = 1; }

message DeleteEmploymentOrderBodyRequest { int64 id = 1; }
message DeleteEmploymentOrderBodyResponse {}

service EmploymentOrderService {
  rpc CreateEmploymentOrderHeader(CreateEmploymentOrderHeaderRequest) returns (CreateEmploymentOrderHeaderResponse);
  rpc GetEmploymentOrderHeader(GetEmploymentOrderHeaderRequest) returns (GetEmploymentOrderHeaderResponse);
  rpc ListEmploymentOrderHeaders(ListEmploymentOrderHeadersRequest) returns (ListEmploymentOrderHeadersResponse);
  rpc UpdateEmploymentOrderHeader(UpdateEmploymentOrderHeaderRequest) returns (UpdateEmploymentOrderHeaderResponse);
  rpc DeleteEmploymentOrderHeader(DeleteEmploymentOrderHeaderRequest) returns (DeleteEmploymentOrderHeaderResponse);

  rpc CreateEmploymentOrderBody(CreateEmploymentOrderBodyRequest) returns (CreateEmploymentOrderBodyResponse);
  rpc GetEmploymentOrderBody(GetEmploymentOrderBodyRequest) returns (GetEmploymentOrderBodyResponse);
  rpc ListEmploymentOrderBodies(ListEmploymentOrderBodiesRequest) returns (ListEmploymentOrderBodiesResponse);
  rpc UpdateEmploymentOrderBody(UpdateEmploymentOrderBodyRequest) returns (UpdateEmploymentOrderBodyResponse);
  rpc DeleteEmploymentOrderBody(DeleteEmploymentOrderBodyRequest) returns (DeleteEmploymentOrderBodyResponse);
}
